--- a/wp-content/themes/salefish/assets/scss/pages/single_post.scss
+++ b/wp-content/themes/salefish/assets/scss/pages/single_post.scss
@@ -79,7 +79,6 @@
     max-height: 520px;
     cursor: pointer;
 
-    &:hover img { transform: scale(1.04); }
 
     img {
       width: 100%;
@@ -313,7 +312,6 @@
       }
     }
 
-    &:hover &__image img { transform: scale(1.04); }
 
     &__body {
       padding: 16px;
